--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
+    "@types/node": "20.11.17",
+    "@types/react": "18.2.55",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "prisma": "^5.9.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "5.3.3"
   }
 }
